@@ -1,5 +1,6 @@
 #  File src/library/base/R/rep.R
 #  Part of the R package, http://www.R-project.org
+#  Modifications for pqR Copyright (c) 2017 Radford M. Neal.
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -15,6 +16,8 @@
 #  http://www.r-project.org/Licenses/
 
 rep.int <- function(x, times) .Internal(rep.int(x, times))
+
+rep_len <- function(x, length.out) .Internal(rep_len(x, length.out))
 
 rep.factor <- function(x, ...)
 {
